# svsm

./: Cargo.toml  Makefile
.github/workflows/: rust.yml
aproxy/: Cargo.toml
aproxy/src/: attest.rs  main.rs
aproxy/src/backend/: kbs.rs  mod.rs  teekms.rs
kernel/: Cargo.toml
kernel/src/: attest.rs  lib.rs  serial.rs  svsm.rs
kernel/src/mm/: address_space.rs
libaproxy/src/: attestation.rs  negotiation.rs
