[package]
name = "svsm"
version = "0.1.0"
edition = "2021"
rust-version = "1.82.0"

[[bin]]
name = "stage2"
path = "src/stage2.rs"
test = false

[[bin]]
name = "svsm"
path = "src/svsm.rs"
test = false

[lib]
test = true
doctest = true

[dependencies]
bootlib.workspace = true
cpuarch.workspace = true
libaproxy.workspace = true
elf.workspace = true
syscall.workspace = true

aes-gcm = { workspace = true, features = ["aes", "alloc"] }
base64.workspace = true
bitfield-struct.workspace = true
bitflags.workspace = true
gdbstub = { workspace = true, optional = true }
gdbstub_arch = { workspace = true, optional = true }
igvm_defs = { workspace = true, features = ["unstable"] }
intrusive-collections.workspace = true
kbs-types.workspace = true
log = { workspace = true, features = ["max_level_info", "release_max_level_info"] }
packit.workspace = true
libtcgtpm = { workspace = true, optional = true }
rand_chacha.workspace = true
rdrand.workspace = true
rsa.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
zerocopy.workspace = true

[target."x86_64-unknown-none".dev-dependencies]
test.workspace = true

[features]
default = []
enable-gdb = ["dep:gdbstub", "dep:gdbstub_arch"]
vtpm = ["dep:libtcgtpm"]
nosmep = []
nosmap = []
shadow-stacks = []

[dev-dependencies]

[lints]
workspace = true
